# steam-crawler

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README_EN.md  config.yaml  docker-compose.yml  main.py  requirements.txt  run.py  start.sh  steam评论自动化流程-需求文档.docx  update.sh  加载更多.txt  回复用户.txt  评论数据包.txt
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260429_0001_initial_review_admin.py  20260430_0002_reply_strategy_fields.py  20260430_0003_reply_draft_error_message.py  20260430_0004_reply_records_and_task_schedules.py  20260430_0005_task_logs.py  20260506_0005_revision_alias.py  20260506_0005_task_logs.py  20260507_0006_multi_game_task_schedules.py  20260507_0007_game_management_seed_and_uniqueness.py  20260508_0008_reply_strategy_skill_content.py  20260512_0009_game_scope_split.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/cli/: create_user.py  import_seed_games.py  import_stock_reviews.py
backend/app/core/: config.py  database.py  error_utils.py  (+1 more)
backend/tests/: test_aliyun_client.py  test_auth_and_user_routes.py  test_comment_scraper.py  test_developer_reply_service.py  test_game_routes.py  test_game_seed_importer.py  test_health.py  test_oxylabs_proxy.py  test_reply_generation_service.py  test_reply_strategy_routes.py  test_review_repository.py  test_review_routes.py  test_review_sync_service.py  test_stats_routes.py  test_steam_rate_limiter.py  test_steam_reviews_importer.py  test_stock_reviews_importer.py  test_task_routes.py
(+121 files in other folders)
